--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "echarts": "^5.4.3",
+    "echarts-wordcloud": "2",
+    "element-plus": "^2.4.4",
+    "js-cookie": "^3.0.5",
+    "querystring": "^0.2.1",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
